Cambios el origen de las imagenes de logo y user

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <header class="header">
-        <img class="header__img" src="./images/logo-platzi-video-BW2.png" alt="Logo" >
+        <img class="header__img" src="https://static.platzi.com/media/tmp/class-files/git/curso-frontend-escuelajs/curso-frontend-escuelajs-menu-desplegable/menu-desplegable/logo-platzi-video-BW2.png" alt="Logo" >
         <div class="header__menu">
             <div class="header__menu--profile">
-                <img src="./images/user-icon.png" alt="user">
+                <img src="https://static.platzi.com/media/tmp/class-files/git/curso-frontend-escuelajs/curso-frontend-escuelajs-menu-desplegable/menu-desplegable/user-icon.png" alt="user">
                 <p>Perfil</p>
             </div>
             <ul>
